--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,11 @@ services:
     restart: unless-stopped
     ports:
       - "8000:8000"
-    environment:
-      - DB_HOST=db
-      - DB_PORT=3306
-      - DB_DATABASE=tasks
-      - DB_USERNAME=root
-      - DB_PASSWORD=root
     volumes:
       - .:/app
     depends_on:
       - db
+      - redis
     networks:
       - task-management-network
 
@@ -36,9 +31,21 @@ services:
     networks:
       - task-management-network
 
+  redis:
+    image: redis:alpine
+    container_name: task-management-redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    networks:
+      - task-management-network
+
 networks:
   task-management-network:
     driver: bridge
 
 volumes:
   dbdata:
+  redisdata:
