--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - .:/app
       - ./supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
-      - ./logs/supervisor:/var/log/supervisor
+      - ./storage/logs:/var/log/supervisor
     depends_on:
       - db
       - redis
@@ -50,4 +50,6 @@ networks:
 
 volumes:
   dbdata:
+    driver: local
   redisdata:
+    driver: local
